--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Family English Hub</title>
-  <div id="root"></div>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Family English Hub</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+        .header {
+            background-color: #4a90e2;
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+        }
+        .content {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .card {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 20px;
+            margin: 10px;
+            width: 200px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .login-btn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 20px;
+        }
+        .login-btn:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-  <h1>Welcome to Family English Hub</h1>
-  <!-- 这里可以添加更多内容 -->
+    <div class="header">
+        <h1>Welcome to Family English Hub</h1>
+        <p>Your one-stop platform for English learning</p>
+    </div>
+
+    <div class="content">
+        <div class="card">
+            <h3>Interactive Lessons</h3>
+            <p>Engaging English lessons for all levels</p>
+        </div>
+        <div class="card">
+            <h3>Vocabulary Builder</h3>
+            <p>Learn new words every day</p>
+        </div>
+        <div class="card">
+            <h3>Progress Tracking</h3>
+            <p>Monitor your learning journey</p>
+        </div>
+    </div>
+
+    <button class="login-btn" onclick="alert('Login functionality coming soon!')">Login / Sign Up</button>
+
+    <script>
+        // Simple interactive element
+        document.querySelectorAll('.card').forEach(card => {
+            card.addEventListener('mouseover', function() {
+                this.style.transform = 'translateY(-5px)';
+                this.style.transition = 'transform 0.3s';
+            });
+            card.addEventListener('mouseout', function() {
+                this.style.transform = 'translateY(0)';
+            });
+        });
+    </script>
 </body>
 </html>
